--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,45 @@
-<router-outlet></router-outlet>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mi Página con Bootstrap</title>
+        <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    </head>
+<body>
+    <nav>
+        <div>
+            <a href="">
+                <img src="assets/logo.png" alt="Logo de Poemas">
+                Libro poemas
+            </a>
+        </div>
+        <div>
+            <ul>
+                <li><a href="home"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="auth"><i class="fas fa-user"></i> Autores</a></li>
+                <li><a href="reviews"><i class="fas fa-book"></i> Reseñas</a></li>
+                <li><a href="#contacto"><i class="fas fa-envelope"></i> Contactos</a></li>
+            </ul>
+        </div>
+    </nav>
+    <router-outlet></router-outlet>
+    <div class="cajita3">
+        <footer id="contacto">
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="footer-links">
+                <a href="#">Sobre Nosotros</a>
+                <a href="#">Contacto</a>
+            </div>
+            <p>&copy; 2024 Mi Página Web. Todos los derechos reservados.</p>
+        </footer>
+    </div>
+</body>
+</html>
+
+
