--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="cajita2__descargar">
             <span>Para descargar el libro da click en el siguiente boton</span>
-            <button (click)="goToAutores()"><a href="">Descargar</a></button>
+            <button><a href="https://docs.google.com/document/d/1-5VQ1y-Apgy3_jpBHIgbouCResGi3TtS/edit?usp=sharing&ouid=103208021810357051326&rtpof=true&sd=true">Descargar</a></button>
 
         </div>
         <div class="reseñas" id="res">
