--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -126,7 +126,7 @@ h1 {
 h3 {
   text-align: center;
   font-size: 40px;
-  margin: 10px;
+  margin: 40px 20px 15px 20px;
 }
 
 .cajita2 .sinopsis {
